--- a/app/src/main/res/layout/dialog_add_name.xml
+++ b/app/src/main/res/layout/dialog_add_name.xml
@@ -21,7 +21,7 @@
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
         android:fontFamily="sans-serif"
-        android:hint="input password"
+        android:hint="걸음 이름을 입력하세요"
          />
 
 </LinearLayout>
