--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,11 +3,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_record"
-            android:icon="@drawable/ic_directions_walk_black_24dp"
+            android:icon="@drawable/ic_walk_black"
             android:title="@string/record" />
         <item
             android:id="@+id/nav_treasure"
-            android:icon="@drawable/ic_work_black_24dp"
+            android:icon="@drawable/ic_work_black"
             android:title="@string/treasure" />
     </group>
 </menu>
