--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -32,4 +32,18 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_play" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_flag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="86dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_flag_white"
+        android:visibility="gone" />
+
 </android.support.design.widget.CoordinatorLayout>
