--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.seongsoft.wallker.activity.MainActivity">
+    tools:context="com.seongsoft.wallker.activity.MapActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -25,15 +25,15 @@
     <include layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_walking"
+        android:id="@+id/fab_flag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_play" />
+        android:src="@drawable/ic_flag_white" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_flag"
+        android:id="@+id/fab_walking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -43,7 +43,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_flag_white"
-        android:visibility="gone" />
+        android:src="@drawable/ic_play" />
 
 </android.support.design.widget.CoordinatorLayout>
