--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="mine">#804CAF50</color>
+    <color name="others">#80F44336</color>
+
+    <color name="iron">#CCCCCC</color>
 </resources>
