--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_flag_white" />
+        android:src="@drawable/ic_flag_border" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_walking"
