--- a/app/src/main/res/layout/dialog_ranking.xml
+++ b/app/src/main/res/layout/dialog_ranking.xml
@@ -6,7 +6,7 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs_ranking"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_ranking"
