--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,14 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-    <Item
-        android:id="@+id/action_location_refresh"
-        android:title="@string/action_rotate"
-        android:icon="@drawable/ic_gps_not_fixed_white_24dp"
-        app:showAsAction="always"
-        />
+        android:id="@+id/action_ranking"
+        android:title="@string/action_ranking"
+        android:icon="@drawable/ic_ranking"
+        app:showAsAction="ifRoom" />
 </menu>
